Time: 945 ms (66.24%), Space: 56.1 MB (49.42%) - LeetHub